# librim

./: CMakeLists.txt  README.md  architecture.md  build.sh
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_client.cpp  benchmark_server.cpp  run_benchmark.sh
examples/: 01_basic_demo.cpp  02_sensor_network_udp.cpp  03_hybrid_gateway.cpp  CMakeLists.txt
include/librim/: application.hpp  async_logger.hpp  context.hpp  expected.hpp  factory.hpp  message_dispatcher.hpp  tcp_client.hpp  tcp_server.hpp  udp_endpoint.hpp
tests/: CMakeLists.txt  main.cpp  test_dispatcher.cpp  test_networking.cpp
